--- a/index.html
+++ b/index.html
@@ -7,10 +7,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css/style.css">
+    <script src="https://kit.fontawesome.com/3682c7ff33.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-
+    <header>
+        <div class="header-section container">
+            <div class="menu-bar">
+                <div class="logo">
+                    <h4>Influencer products</h4>
+                </div>
+                <div class="nav-menu">
+                    <nav>
+                        <ul>
+                            <li>Home</li>
+                            <li>Products</li>
+                            <li>Sign Up</li>
+                            <li>Log in</li>
+                            <li><i class="fas fa-search"></i></li>
+                            <li><i class="fas fa-cart-plus"></i></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
